Github link on name

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,8 @@
 <!-- <ng-include src="sidebar.html"></ng-include> -->
   <div class="col-lg-4 col-sm-4 sidebar">
     <div class="sidebar-content">
-      <div><h1 class="name">Michael Paris</h1></div>
+      <!-- <a class="github" href="https://github.com/mlp5ab"><img src="img/github-64-black.png" alt="Github"></a> -->
+      <div><a class="name-link" title="Github" href="https://github.com/mlp5ab"><h1 class="name">Michael Paris</h1></a></div>
       <div class="quote">
           <p class="lead">"We are what we repeatedly do. Excellence, therefore, is not an act but a habit."</p>
           <p class="lead">- Aristotle</p>
