--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,15 @@
   <script src="js/services.js"></script>
   <script src="lib/angular-resource/angular-resource.js"></script>
   <script src="lib/angular-sanitize/angular-sanitize.min.js"></script>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-43953460-1', 'michaelparis.us');
+    ga('send', 'pageview');
+  </script>
   <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/dropbox.js/0.10.1/dropbox.min.js"> -->
   </script>
 </head>
