--- a/public/index.html
+++ b/public/index.html
@@ -43,12 +43,13 @@
           <p class="lead">"We are what we repeatedly do. Excellence, therefore, is not an act but a habit."</p>
           <p class="lead">- Aristotle</p>
       </div>
-      <div class="projects-header"><h2>Habits</h2></div>
+      <div class="habits-header"><h2>Habits</h2></div>
       <ul>
-        <li class="project"><a href="/#/">Blog</a></li>
-        <li class="project"><a href="/#/music">Music</a></li>
-        <li class="project"><a href="/#/sketches">Doodling</a></li>
-        <li class="project"><a href="/#/clock">Time</a></li>
+        <li class="habit"><a href="/#/">Writing</a></li>
+        <li class="habit"><a href="/#/music">Music</a></li>
+        <li class="habit"><a href="/#/sketches">Doodling</a></li>
+        <li class="habit"><a href="/#/clock">Time to Relax</a></li>
+        <!-- <li class="habit"><a href="/#/projects">Projects</a></li> -->
         <!-- <li class="project"><a href="/#/analog">Analog Clock</a></li>
         <li class="project"><a href="/#/dragndrop">Drag n' Drop</a></li> -->
       </ul>
