Updated Findmes on index.html

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
   <div class="col-lg-4 col-sm-4 sidebar">
     <div class="sidebar-content">
       <!-- <a class="github" href="https://github.com/mlp5ab"><img src="img/github-64-black.png" alt="Github"></a> -->
-      <div><a class="name-link" title="Github" href="https://github.com/mlp5ab"><h1 class="name">Michael Paris</h1></a></div>
+      <div><a class="name-link" title="Github" href="https://github.com/mlp5ab?tab=repositories"><h1 class="name">Michael Paris</h1></a></div>
       <div class="quote">
           <p class="lead">"We are what we repeatedly do. Excellence, therefore, is not an act but a habit."</p>
           <p class="lead">- Aristotle</p>
@@ -53,6 +53,10 @@
         <!-- <li class="project"><a href="/#/analog">Analog Clock</a></li>
         <li class="project"><a href="/#/dragndrop">Drag n' Drop</a></li> -->
       </ul>
+    </div>
+    <div class="findmes">
+      <a class="github" href="https://github.com/mlp5ab?tab=repositories"><img src="img/github-64-black.png" alt="Github"></a>
+      <a href="http://www.linkedin.com/profile/view?id=170283854" class="linkedin"><img src="img/linkedin-64-black.png" alt="LinkedIn"></a>
     </div>
   </div>
   <div class="col-lg-4 col-sm-4"></div>
